--- a/core/templates/core/touchup_plan_detail.html
+++ b/core/templates/core/touchup_plan_detail.html
@@ -1,5 +1,6 @@
 {% extends "core/base_modern.html" %}
 {% load static %}
+{% load core_extras %}
 
 {% block title %}Touch-ups - {{ plan.name }}{% endblock %}
 
