--- a/core/templates/core/touchup_plans_list.html
+++ b/core/templates/core/touchup_plans_list.html
@@ -1,5 +1,6 @@
 {% extends "core/base_modern.html" %}
 {% load static %}
+{% load core_extras %}
 
 {% block title %}Planos Touch-up - {{ project.name }}{% endblock %}
 
